k8s/overlays/linguatext/stt-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stt
  template:
    metadata:
      labels:
        app: stt
    spec:
      containers:
        - name: stt
          image: ghcr.io/plaggy/asrdiarization-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7860
