k8s/overlays/linguatext/stt-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stt
spec:
  selector:
    app: stt
  ports:
    - port: 7860
      targetPort: 7860
  type: ClusterIP
