k8s/overlays/linguatext/tts-uz-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tts-uz
spec:
  selector:
    app: tts-uz
  ports:
    - port: 5002
      targetPort: 5002
  type: ClusterIP
