k8s/overlays/linguatext/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linguatext-frontend-ingress
  namespace: linguatext
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: linguatext-buffer-large@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: linguatext.birgayur.uz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linguatext-frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: linguatext-backend
                port:
                  number: 80
